prover-ray/zkcdriver/testdata/synced/invalid/type_06.zkc
//error:4:1-11:cyclic definition for a
type outer = a
type b = a
type a = b
